--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,5 +1,10 @@
 :root {
   --max-width: 1100px;
+  --color-font-light: #a4bcd2;
+  --color-font-medium: #7491ba;
+  --color-font-bold: #4b5e7f;
+  --color-font-selected: #0069e9;
+  --color-font-cyan: #10d1b7;
 }
 
 * {
